reorg do comeco ate metodolog

--- a/active-learning.tex
+++ b/active-learning.tex
@@ -200,6 +200,8 @@ apresenta cada uma com uma figura padrão ilustrando sua particularidade}
 \ano{definir tempo de espera interconsultas e explicitar que é assumida, qnd possível,
 a realização de cache de todos os cálculos pesados antes da primeira consulta}
 
+\green{apontar parâmetros escolhidos neste trabalho para as estratégias, quando houver}
+
 \subsection{Amostragem aleatória}
 
 \ano{feature: totalmente exploratório}
