--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1069,3 +1069,14 @@ year = {2006}
       year          = "2015",
       note           = "{DOI:10.5281/zenodo.13748. URL:http://dx.doi.org/10.5281/zenodo.13748}",
 }
+
+@article{hearst1998support,
+  title={Support vector machines},
+  author={Hearst, Marti A. and Dumais, ST and Osman, E and Platt, John and Scholkopf, Bernhard},
+  journal={Intelligent Systems and their Applications, IEEE},
+  volume={13},
+  number={4},
+  pages={18--28},
+  year={1998},
+  publisher={IEEE}
+}
