--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -18,9 +18,9 @@ positivamente impactadas pelo aprendizado ativo no experimento principal.
 % \subsection{EIELM}
 \section{CIELM}
 \section{nintera}
-\ano{foi usado no segundo experimento preliminar para demonstrar viabilidade
+\ano{foi usada ELM com topologia raiz(N) no segundo experimento preliminar para demonstrar viabilidade
 de AL com ELM \citep{santos2014viabilidade};
-e tb foi usado como metaclassificador no último experimento}
+e tb foi usada como metaclassificador no último experimento}
 \tar{citar apendice}
 
 \section{ExpELMChange}
