--- a/experimentos.tex
+++ b/experimentos.tex
@@ -1,30 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Experimento preliminar}\label{sec:exppre}
-Um experimento preliminar \citep{conf/hais/SantosC14} foi conduzido visando
-a construção de um panorama geral do desempenho das diversas estratégias
-diante de variadas bases de dados.
-Devido à forte dependência que as estratégias gnósticas têm de seus
-modelos internos de classificação, diferentes algoritmos de aprendizado
-precisam ser adotados quando alguma comparação entre elas é
-pretendida.
-Dessa forma, quatro algoritmos comumente usados foram adotados
-\citep{books/mk/Quinlan93,conf/ecml/Lewis98,conf/kdd/DomingosH00,journals/tit/Hart68}:
-J48\footnote{Implementação do Weka baseada no algoritmo de
-árvore de decisão C4.5.}, NB\footnote{\textit{Naive Bayes}},
-VFDT \footnote{Very Fast Decision Trees} e
-5-NN\footnote{Cinco vizinhos mais próximos.}.
-
-\ano{enumerar bases de dados usadas aqui; referenciar seção}
-
-\subsection{Resultado preliminar}\label{sec:respre}
-\ano{é interessante apresentar os resultados preliminares aqui,
-pois fizeram parte da definição da metodologia;
-assim evita separar exppre de respre e o expprincipal encerra esse capitulo e
-jah emenda o inicio do outro com seus resultados}
-
-
-
-\subsection{Experimentos}\label{sec:ferramentas}
+\chapter{Experimentos}\label{sec:ferramentas}
 \ano{para evitar separar as subdescricoes do experimento de seus subresultados,
 essa seção apenas dá um overview explicando o porquê da escolha de cada
 experimento:
