--- a/propostas.tex
+++ b/propostas.tex
@@ -1,4 +1,7 @@
 \chapter{Propostas} \label{propostas}
+O tema desta tese é o uso efetivo do aprendizado de máquina ativo,
+diante da diversidade existente de estratégias.
+
 \esb{esboça a estrutura conjunta deste e dos próximos 4 capítulos;
 explica que a contribuição se divide em três partes: análise comparativa,
 viabilidade de ap. ativo pra ELM e meta-aprendizado; os detalhes
@@ -50,6 +53,8 @@ os exemplos para consulta passam a ser amostrados da região de desacordo
 entre todos os modelos.
 
 A ordem de complexidade do \textit{SG-multi} é $\mathcal{O}(|Y|)$.
+
+\ano{mesclar descrição abaixo que é mais formal com a descrição acima?}
 
 Para cada classe $c \in Y$, existe um par modelo/conjunto de treinamento
 $\langle\theta_c,\mathcal{L}_c\rangle$
