--- a/resumo.tex
+++ b/resumo.tex
@@ -6,6 +6,14 @@ estratégias}
 
 \tar{checar usos de rótulo e classe}
 
+\ano{citar agencias de fomento? quais? onde?}
+
+\tar{remover citações de baixa qualidade no documento todo}
+
+ \tar{escrever sobre implementação (apendice?):
+ URL, diagrama de classes, LOC, custos totais CPU/memória/disco, total de
+registros no BD}
+
 Apesar do crescente avanço no desenvolvimento de algoritmos capazes de induzir modelos preditivos
 numa grande diversidade de domínios, entraves de cunho econômico, dentre outros, ainda persistem.
 Embora tais modelos sejam construídos sem programação explícita,
