--- a/tese.tex
+++ b/tese.tex
@@ -232,6 +232,7 @@
 \input contexto
 \input propostas
 \input metodologia
+\input experimentos %small; big
 \input exp-analise
 \input exp-elm
 \input exp-meta
