--- a/elm.tex
+++ b/elm.tex
@@ -1,4 +1,4 @@
-\section{Máquinas Extremas}\label{elm}
+\section{Máquinas Extremas}\label{elmorig}
 As máquinas extremas (\textit{Extreme Learning Machines} - ELMs) são redes - não
 necessariamente neurais - com treinamento diferenciado que têm recebido crescente
 atenção devido à sua simplicidade e performance, comparável com o estado da arte
@@ -80,7 +80,7 @@ pode ser feito por meio do cálculo da pseudo-inversa $H^{\dagger}$ de $H$
 Uma formulação mais detalhada da ELM pode ser encontrada na literatura
 \citep{journals/tsmc/HuangZDZ12}.
 
-\subsection{Máquinas Extremas Incrementais}\label{oselm}
+\subsection{OS-ELM}\label{oselm}
 Em sistemas interativos, frequentemente é adotado o esquema incremental de aprendizado.
 O tempo de treinamento é reduzido quando é possível aproveitar o resultado de cálculos
 prévios durante todo o processo.
@@ -141,7 +141,7 @@ OS-ELM não converge para ELM.
 
 \ano{quadrado do resíduo: erro I e CI?}
 
-\section{ I??? }
+\subsection{I-ELM}
 
-\section{ I??? Convexa}
+\subsection{CI-ELM}
 
