--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -1,5 +1,12 @@
-\chapter{Análise Comparativa}\label{analise}
+\section{Análise Comparativa}\label{analise}
 \esb{criar boas siglas pras estrats e learners pras tabelas}
+
+\ano{explicar pela arvore quais os nichos de cada estrategia}
+
+\ano{usar clustering para mostrar que estrategias se adequam a nichos parecidos
+(a arvore do agrupamento hierarquico pode ilustrar bem isso,
+só falta descobrir como fazer o weka imprimir os nomes das strats,
+provavelm é colocando um atributo string.)}
 
 \esb{provavelmente o classificador atrapalha quando ele
 não tem uma estimativa de distribuição de probabilidade suave;
