--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -1,4 +1,5 @@
-\chapter{Máquinas Extremas de Aprendizado Ativo}\label{ealm}
+% Máquinas Extremas de Aprendizado Ativo
+\section{Adaptações de \elms}\label{elmnovas}
 A código das adaptações apresentadas nas próximas seções e outras variantes
 está disponível publicamente \citep{doi/elm}.
 
@@ -11,19 +12,21 @@ explorar resultados separadamente pra cada tipo de ELM}
 \tar{ impossível completar todas as bases, mas ok;
 quanto mais memória, mais datasets}
 
-\section{IELM}
+\subsection{I-ELM interativa}
 
 As propostas incrementais para IELM e CIELM mostraram-se
 positivamente impactadas pelo aprendizado ativo no experimento principal.
 % \subsection{EIELM}
-\section{CIELM}
-\section{nintera}
+
+\subsection{CI-ELM interativa}
+
+\subsection{OSEM-PRESS-ELM}
 \ano{foi usada ELM com topologia raiz(N) no segundo experimento preliminar para demonstrar viabilidade
 de AL com ELM \citep{santos2014viabilidade};
 e tb foi usada como metaclassificador no último experimento}
 \tar{citar apendice}
 
-\section{ExpELMChange}
+\section{Máquina extrema de aprendizado ativo baseada no impacto esperado}
 experimenta ExpELMChange
-(AL especifico pra nintera e/ou pra CIELM) -
+(AL especifico pra nintera e/ou pra IELM e/ou CIELM) -
 comparar com outras estrats.
