--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -2,6 +2,10 @@
 \ano{resume livro de meta-ap.; cita Marcilio, statlog;
 falar do desafio de nao usar informacoes sobre os rotulos (classes) nas metafeatures}
 
+\ano{como a predição da melhor não vence a majoritaria preciso usar ranking
+(ainda posso testar algumas variações, como fixar
+cada um dos learners possíveis)}
+
 
 \ano{Acho que NFL se refere à impossibilidade de aprendizado sem viés
 no caso de ap. ativo trata-se mais de amostragem do que de aprendizado;
