--- a/introducao.tex
+++ b/introducao.tex
@@ -72,23 +72,23 @@ decorre de o fato do processo ativo de amostragem não ser uma
 Uma consulta ótima depende de quantas ainda podem ser feitas.
 
 \section{Estrutura do documento}\label{estrutura}
-A notação matemática adotada e a revisão da literatura das áreas
+A notação matemática e a terminologia adotadas e a revisão da literatura das áreas
 envolvidas neste trabalho são apresentadas no Capítulo \ref{contexto}.
 No Capítulo \ref{propostas},
-são apresentadas as propostas de adaptação de algoritmos
-e é explicada a organização por etapas dos demais capítulos de propostas.
-\ano{rever}
-Essas etapas são uma sequência de pares proposta-experimento
-expostos nos capítulos \ref{analise}, \ref{ealm} e \ref{aml}
-com o intuito de manter a unidade de cada assunto.
-O Capítulo \ref{metodologia} contém detalhes de implementação
-da avaliação empírica que são comuns a todos os experimentos.
-Por fim, uma análise geral unificada da contribuição da tese e
+são apresentadas as propostas de algoritmos.
+O Capítulo \ref{metodologia} contém os métodos de avaliação e detalhes de
+implementação comuns a todos os experimentos descritos neste documento.
+Essa avaliação empírica e seus experimentos e resultados associados são apresentados
+no Capítulo \ref{experimentos}.
+Adicionalmente, uma abordagem baseada em meta-aprendizado
+é proposta e avaliada no Capítulo \ref{aml}.
+Por fim, uma análise geral unificada das contribuições da tese e
 desdobramentos futuros são apresentados no
 Capítulo \ref{conclusao}.
 Detalhes sobre os cenários de aprendizado ativo, resultados,
-formatação, estilo e terminologia podem ser encontrados nos apêndices.
-\ano{mencionar apendice de rev. sistemática?}
+formatação, estilo e terminologia podem ser encontrados nos apêndices \ano{ <- revisar}.
+
+\ano{mencionar apendice de rev. sistemática? outros aps?}
 
 %
 % No Capítulo \ref{cap:classificacao}, é apresentada a notação utilizada neste trabalho juntamente com um texto introdutório sobre aprendizado supervisionado para contextualizar as duas revisões bibliográficas que o seguem: a primeira sobre \textit{ensembles} e a segunda sobre \textit{fluxos de dados}.
