--- a/propostas.tex
+++ b/propostas.tex
@@ -145,7 +145,7 @@ a quantidade de consultas a exemplos da classe minoritária.
 
 % \subsection{Agnóstica e ponderada pela utilidade de cada classe}
 
-\subsection{Impacto esperado na \elm}
+\input exp-elm
 
 \section{KFF multiclasse?}
 %parece que foi um fiasco quando desbalanceado (pior que random)
