--- a/contexto.tex
+++ b/contexto.tex
@@ -1,8 +1,8 @@
 \chapter{Contexto} \label{contexto}
 Algumas habilidades humanas vêm claramente programadas geneticamente
 e outras são apenas a execução de passos memorizados,
-como é o caso da amamentação e o trabalho efetuado numa
-determinada posição de uma linha de montagem industrial, respectivamente.
+como é, respectivamente, o caso da amamentação e o trabalho efetuado numa
+determinada posição de uma linha de montagem industrial.
 Apesar do amplo escopo de ação desses dois tipos de conhecimento,
 ainda resta um vasto espectro de novas habilidades adquiríveis
 sem que seja necessária uma programação prévia.
